2002-02-11  John Sullivan  <sullivan@apple.com>

	Fixed bug where clicking on empty browser page would crash. This could
	happen when the start page was empty, or failed to load.

	* WebView.subproj/IFWebView.mm: 
	(-[IFWebView mouseUp:]), (-[IFWebView mouseDown:]):
	Checked for nil widget before dispatching mouse events.

2002-02-08  John Sullivan  <sullivan@apple.com>

	Changed back & forward to goBack and goForward and made them not return
	a value (so signatures match those in WebBrowser). Added backEntry and
	forwardEntry that don't alter the list. These will be needed to ask to
	go to the URL at the back position without altering the back list until
	the change is committed.

	* History.subproj/IFBackForwardList.h:
	* History.subproj/IFBackForwardList.m: (-[IFBackForwardList goBack]),
	(-[IFBackForwardList backEntry]), (-[IFBackForwardList currentEntry]),
	(-[IFBackForwardList forwardEntry]), (-[IFBackForwardList goForward]):

2002-02-07  Richard Williamson  <rjw@apple.com>
    
    More changes to IFLocationChangeHandler API.

	* WebView.subproj/IFBaseWebController.mm:
	* WebView.subproj/IFWebController.h:
	* WebView.subproj/IFWebDataSource.mm: (-[IFWebDataSource startLoading:]):
	* WebView.subproj/IFWebDataSourcePrivate.h:
	* WebView.subproj/IFWebDataSourcePrivate.mm: (-[IFWebDataSource
	_startLoading:initiatedByMouseEvent:]):
	* WebView.subproj/IFWebFramePrivate.h:

2002-02-07  Richard Williamson  <rjw@apple.com>

    Update IFLocationChangeHandler API.  Added factored code for
    URL loading.
    
	* ChangeLog:
	* WebView.subproj/IFBaseWebController.h:
	* WebView.subproj/IFBaseWebController.mm: (-[IFBaseWebController
	setMainView:andMainDataSource:]), (-[IFBaseWebController
	_changeLocationTo:forFrame:parent:]), (-[IFBaseWebController
	_changeFrame:dataSource:]), (-[IFBaseWebController
	locationChangeCommittedForFrame:]):
	* WebView.subproj/IFBaseWebControllerPrivate.h:
	* WebView.subproj/IFWebController.h: